--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,15 +26,14 @@
       <%= render 'layouts/navigation' %>
     </header>
     <main role="main">
-      <% if current_user && current_user.entreprise %>
-        <%= current_user.email %><br/>
-        <%= current_user.entreprise.nom %>, (<%= current_user.entreprise_type.upcase %>)<br/>
-      <% end %>
       <%= render 'layouts/messages' %>
       <%= yield %>
     </main>
  <footer>
         <p>&copy; GCS EPSILIM 2014</p>
+         <% if current_user && current_user.entreprise %>
+        <%= current_user.email %>, <%= current_user.entreprise.nom %>, (<%= current_user.entreprise_type.upcase %>)<br/>
+      <% end %>
       </footer>
 
   </body>
