--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -5,7 +5,7 @@
   <div class="row">
   <div class="col-md-6">
     <div class="embed-responsive embed-responsive-4by3">
-      <iframe width="420" height="315" src="//www.youtube.com/embed/Ak8ymrmRsws" frameborder="0" allowfullscreen></iframe>
+      <iframe width="420" height="315" src="//www.youtube.com/embed/GZeAhBkBDQ0" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
   <div class="col-md-6">
