--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -15,7 +15,7 @@
     <% end %>
     <% unless current_user %>
     <p>Dévelopée par le GCS EPSILIM avec l'appui métier du Groupement Régional de Commande, cette plateforme achat a pour objectif de simplifier les échanges entre fournisseurs et établissements</p>
-    <%= link_to "S'inscrire >>", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+    <%= link_to "S'inscrire >>", new_user_registration_path, class: "btn btn-primary btn-lg disabled" %>
     <% end %>
   </div>
 </div>
