bug création fournisseur

--- a/app/views/fournisseurs/show.html.erb
+++ b/app/views/fournisseurs/show.html.erb
@@ -36,8 +36,8 @@
   <strong>Ville:</strong>
   <%= @fournisseur.ville %>
 </p>
- <%= back etablissement_path(@etablissement) %>
-  <%= edit edit_etablissement_path(@etablissement) %>
+ <%= back fournisseur_path(@fournisseur) %>
+  <%= edit edit_fournisseur_path(@fournisseur) %>
 </div>
 <%= link_to 'Edit', edit_fournisseur_path(@fournisseur) %> |
 <%= link_to 'Back', fournisseurs_path %>
