--- a/app/views/famille_segments/new.html.erb
+++ b/app/views/famille_segments/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Famille Segment</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', famille_segments_path %>
+<%= render "shared/bandeau", titre: "Nouvelle famille de segments", texte: "Création d'un nouveau segment" %>
+<div class="container">
+  <%= render 'form' %>
+</div>
