--- a/app/views/fournisseurs/show.html.erb
+++ b/app/views/fournisseurs/show.html.erb
@@ -36,8 +36,9 @@
   <strong>Ville:</strong>
   <%= @fournisseur.ville %>
 </p>
- <%= back fournisseur_path(@fournisseur) %>
-  <%= edit edit_fournisseur_path(@fournisseur) %>
-</div>
-<%= link_to 'Edit', edit_fournisseur_path(@fournisseur) %> |
-<%= link_to 'Back', fournisseurs_path %>
+
+<%= back fournisseurs_path %>
+<%= edit edit_fournisseur_path(@fournisseur) %>
+
+
+
