--- a/app/views/point_livraisons/_form.html.erb
+++ b/app/views/point_livraisons/_form.html.erb
@@ -1,45 +1,23 @@
-<%= form_for(@point_livraison) do |f| %>
-  <% if @point_livraison.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@point_livraison.errors.count, "error") %> prohibited this point_livraison from being saved:</h2>
+<%= bootstrap_nested_form_for([@etablissement, @point_livraison]) do |f| %>
+ <%= render 'shared/model_errors', modele: @point_livraison %>
 
-      <ul>
-      <% @point_livraison.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= f.text_field :adresse_ligne1, label: "Ligne 1" %>
+  <%= f.text_field :adresse_ligne2, label: "Ligne 2" %>
+  <%= f.text_field :adresse_cp, label: "Code postal" %>
+  <%= f.text_field :adresse_ville, label: "Ville" %>
+  <%= f.text_area :adresse_commentaire, label: "Commentaire sur l'adresse de livraison" %>
+  <%= f.check_box :is_principal, label: "Lieu de livraison par défaut" %>
+  <%= f.select :famille_segment_ids,
+  @famille_segments.map { |u| [u.libelle, u.id] },
+               { include_blank: true, label: "Les familles de segments associés  :" },
+               { multiple: true, class: 'chosen-select'}
+%>
 
-  <div class="field">
-    <%= f.label :adresse_ligne1 %><br>
-    <%= f.text_field :adresse_ligne1 %>
-  </div>
-  <div class="field">
-    <%= f.label :adresse_ligne2 %><br>
-    <%= f.text_field :adresse_ligne2 %>
-  </div>
-  <div class="field">
-    <%= f.label :adresse_cp %><br>
-    <%= f.text_field :adresse_cp %>
-  </div>
-  <div class="field">
-    <%= f.label :adresse_ville %><br>
-    <%= f.text_field :adresse_ville %>
-  </div>
-  <div class="field">
-    <%= f.label :adresse_commentaire %><br>
-    <%= f.text_field :adresse_commentaire %>
-  </div>
-  <div class="field">
-    <%= f.label :is_principal %><br>
-    <%= f.check_box :is_principal %>
-  </div>
-  <div class="field">
-    <%= f.label :etablissement_id %><br>
-    <%= f.text_field :etablissement_id %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+ <%= f.fields_for :horaire_livraisons %>
+ <span class="glyphicon glyphicon-plus"></span>
+  <%= f.link_to_add "Horaires de livraison", :horaire_livraisons %>
+  <br/>
+  <br/>
+
+<%= f.submit nil, class: 'btn btn-primary' %>
 <% end %>
