--- a/app/views/point_livraisons/new.html.erb
+++ b/app/views/point_livraisons/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Point Livraison</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', point_livraisons_path %>
+<%= render "shared/bandeau", titre: "Nouveau point de Livraison", texte: "Création d'un point de livraison" %>
+<div class="container">
+  <%= render 'form' %>
+</div>
