--- a/app/views/point_livraisons/index.html.erb
+++ b/app/views/point_livraisons/index.html.erb
@@ -1,8 +1,11 @@
-<p id="notice"><%= notice %></p>
+<%= render "shared/bandeau_new",
+ titre: "Points de livraion de l'établissement #{@etablissement.nom}",
+ texte: "Module d'administration des points de livraison",
+ path: new_etablissement_point_livraison_path %>
 
-<h1>Listing Point Livraisons</h1>
 
-<table>
+<div class="container">
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Adresse ligne1</th>
@@ -11,8 +14,7 @@
       <th>Adresse ville</th>
       <th>Adresse commentaire</th>
       <th>Is principal</th>
-      <th>Etablissement</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -25,15 +27,11 @@
         <td><%= point_livraison.adresse_ville %></td>
         <td><%= point_livraison.adresse_commentaire %></td>
         <td><%= point_livraison.is_principal %></td>
-        <td><%= point_livraison.etablissement %></td>
-        <td><%= link_to 'Show', point_livraison %></td>
-        <td><%= link_to 'Edit', edit_point_livraison_path(point_livraison) %></td>
-        <td><%= link_to 'Destroy', point_livraison, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= edit_small edit_etablissement_point_livraison_path(@etablissement, point_livraison) %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+</div>
 
-<br>
 
-<%= link_to 'New Point livraison', new_point_livraison_path %>
