--- a/app/views/fncs/_form.html.erb
+++ b/app/views/fncs/_form.html.erb
@@ -49,7 +49,10 @@
     <%= f.link_to_add "Observation supplémentaire", :observations %>
     <br/>
     <br/>
-    <br/>
+
+    <%= f.fields_for :photos %>
+
+
     <%= f.hidden_field :market_id, value: "#{@fnc.market.id}" %>
     <%= f.submit "Enregistrer" %>
 
