--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,7 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "bootstrap/theme";
 
 #logo_achatlim {
 	height: 150%;
@@ -50,3 +51,26 @@ a.forgot_password_nav:hover {
   text-decoration: underline;
 }
 
+#photos-list {
+  padding: 0;
+  margin: 0;
+  margin-top: 30px;
+  clear: both;
+  li {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    min-height: 272px;
+    max-height: 272px;
+    margin-bottom: 10px;
+    text-align: center;
+    img {
+      margin-bottom: 10px;
+    }
+    p {
+      margin: 0;
+      height: 40px;
+      overflow: hidden;
+    }
+  }
+}
