--- a/app/views/fncs/_fixed_elements.html.erb
+++ b/app/views/fncs/_fixed_elements.html.erb
@@ -162,5 +162,20 @@
     <td><%= @fnc.abs_tracabilite %> </td>
   </tr>
 </table>
+<ul class="row" id="photos-list">
+  <% @fnc.photos.each do |photo| %>
+      <li class="col-xs-3">
+        <%= link_to image_tag(photo.image.thumb('180x180#').url, alt: photo.image_name, class: 'img-thumbnail'),
+                    photo.image.remote_url, target: '_blank' %>
+        <% if photo.image_name.present? %>
+          <p><%= photo.image_name %></p>
+        <% end %>
+
+        <% if photo.title.present? %>
+          <p><b>Titre:</b> <%= photo.title %></p>
+        <% end %>
+      </li>
+  <% end %>
+</ul>
 
 
