--- a/app/views/fncs/_form.html.erb
+++ b/app/views/fncs/_form.html.erb
@@ -50,7 +50,7 @@
     <br/>
     <br/>
 
-    <%= f.fields_for :photos %>
+    <!-- %= f.fields_for :photos % -->
 
 
     <%= f.hidden_field :market_id, value: "#{@fnc.market.id}" %>
